z-index fix

--- a/wp-content/themes/beaverwarrior/components/1010DataNavMenu/1010DataNavMenu.less
+++ b/wp-content/themes/beaverwarrior/components/1010DataNavMenu/1010DataNavMenu.less
@@ -1089,7 +1089,7 @@ header{
 
         &-menu_items {
             position: absolute;
-            z-index: 99;
+            z-index: 9999999;
             background: white;
             width: 100vw;
             left: 0px;
